# Lunara

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Justfile  Licence  Makefile  README.md  _Deparsed_XSubs.pm  database.properties  deny.toml  docker-compose.yaml  entrypoint.sh  nextest.toml  rustfmt.toml
.devcontainer/: Dockerfile  compose-dev.yml  devcontainer.json  install.be  install.pm  install.t  install_libs.sh
.github/: copilot-instructions.md  dependabot.yml  pr_check.yml
.github/workflows/: ci.yml  clippy.yml  codeql.yml  docker-image.yml  docker-publish.yml  pr_check.yml  publish-ghcr.yml  rust-clippy.yml  rust.yml  upload_and_test.yml
.run/: Compose.run.xml
backend/: Cargo.toml
backend/src/: keyring_service.rs  main.rs
backend/src/api/: mod.rs
backend/src/api/auth/: create.rs
backend/src/database/: db.rs
backend/src/http/: server_creator.rs
backend/src/mc/: plugin.rs  server.rs
backend/src/route/: api_route.rs  auth_route.rs
flutter/lib/: colours.dart  main.dart  ui_config.dart
flutter/web/: index.html
frontend/: main.py
frontend/screen/: __init__.py  home.py  login.py
src/: config.rs  keyring_service.rs  main.rs
src/account/: mod.rs
src/api/: mod.rs  route.rs
src/api/auth/: create.rs  login.rs  mod.rs  signup.rs
src/database/: db.rs  mod.rs
src/entity/: accounts.rs  mod.rs
src/http/: plugin_fetch.rs  server_creator.rs
src/keyring/: keyring_service.rs  mod.rs
src/mc/: mod.rs  plugin.rs  server.rs
src/minecraft/: mod.rs  server.rs
src/route/: api_route.rs  auth_route.rs  mc_route.rs  route_error.rs  servers.rs
src/routes/: auth_route.rs
static/: index.html
static/assets/: index-XGG_wcuM.js
web/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
web/src/: App.tsx
web/src/home/: HomePage.tsx
