[package]
name = "Lunara"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-postgres = { version = "0.7.15", features = ["with-uuid-1"] }
axum = { version = "0.8.8", features = ["macros"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
dotenv = "0.15.0"