[workspace]
resolver = "2"
members = [
  "backend"
]

[workspace.package]
version = "1.0.0"
authors = ["user93390"]
edition = "2024"
rust-version = "1.92.0"
readme = "README.md"
repository = "https://github.com/user93390/lunara"
license = "Apache-2.0"
keywords = ["Containerization", "Docker", "Minecraft"]

[workspace.dependencies]
lunara-backend = { path = "backend", version = "1.0.0" }

[profile.release]
opt-level = "z"
debug = "full"
strip = "symbols"
lto = true
panic = "abort"
codegen-units = 1
