[package]
authors = ["seasnail1"]
repository = "https://github.com/user93390/Lunara"
license = "Apache-2.0"
version = "1.0.0"
name = "Lunara"
edition = "2024"
rust-version = "1.94.0"
description = "Backend of Lunara"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
axum-cookie = "0.2.4"
axum-extra = { version = "0.12.5", features = ["query"] }
base64 = "0.22.1"
env_logger = "0.11.10"
hex = "0.4.3"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
keyring = { version = "3.6.3", features = [
  "crypto-rust",
  "linux-native",
  "tokio"
] }
log = "0.4.29"
rand = "0.10.0"
reqwest = { version = "0.13.2", features = ["json"] }
sea-orm = { version = "1.1.19", features = [
  "macros",
  "runtime-tokio-rustls",
  "sqlx-postgres"
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = [
  "fs",
  "io-util",
  "macros",
  "process",
  "rt",
  "rt-multi-thread"
] }


toml = "1.1.0"
tower = {version = "0.5.3", features = ["limit"]}
tower-http = { version = "0.6.8", features = ["cors", "fs", "trace"] }
tracing = "0.1.44"
uuid = { version = "1.22.0", features = ["serde", "v4"] }

[dev-dependencies]
tower = "0.5.3"


[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
